@@ -4,7 +4,7 @@
  *
  * Copyright (C) 2011 KUBO Takehiro <kubo@jiubao.org>
  */
-#ifndef NATIVE_THREAD_H
+#ifdef USE_THREAD_LOCAL_ERRHP
 
 /*
  * Prepare to execute thread-related functions.
@@ -17,5 +17,14 @@ void Init_oci8_thread_util(void);
  * The return value is errno.
  */
 int oci8_run_native_thread(rb_blocking_function_t func, void *arg);
+
+#else
+
+/*
+ * For ruby 1.8 configured without --enable-pthread on Unix.
+ */
+
+#define Init_oci8_thread_util() do {} while (0)
+#define oci8_run_native_thread(func, arg) ((func)(arg), 0)
 
 #endif
